--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p>These are some of the projects I have created</p>
             <a href = "./public/birthday-invite.html">Birthday invite</a>
             <br />
-            <img src = "./assets/images/Birthday-invite.png" height = "400" alt = "Preview of the webpage"/>
+            <img src = "assets/images/Birthday-invite.png" height = "400" alt = "Preview of the webpage"/>
             <hr />
             <a href = "./public/The-must-read-parchment.html">The must The-must-read-parchment</a>
             <br />
